# comp9319-25T3

./: .gitignore  arithmetic_coding.py
ass1/: CMakeLists.txt  automark  autotest
ass1/src/: ldecode.cpp  lencode.cpp
ass1/tests/: test1.lzw  test10.lzw  test10.txt  test2.lzw  test2.txt  test3.lzw  test3.txt  test4.lzw  test4.txt  test5.lzw  test5.txt  test7.lzw  test7.txt  test8.lzw  test8.txt  test9.lzw  test9.txt
ass2/: .gitignore  autotest  avg_run_length.py  avg_run_length_bwt.py  bwt-util.c  bwt-util.h  bwt_encode_rbwt.py  bwtdecode.c  bwtsearch.c  makefile  new_size.py  new_size_fm_index.py
ass2/mytests/: dna-tiny.rbwt  tiny-1.bwt  tiny-1.rbwt  tiny-1.txt
ass2/tests/: dna-small.rbwt  dna-tiny.input2  dna-tiny.output  dna-tiny.output2
ex02/: ava-task.sty  exercise_2_3.tex
ex1/: ex1.tex
exam/sample_exam/q1/: q1  q1.cc
exam/sample_exam/q2/: q2-slow  q2.cc  test-small.bwt
examples/wk1/: bibrec.bwt  bibrec.txt  eg1.long1  eg1.long2  eg1.rle  eg1.rle-bin  eg1.txt  eg2.bin-prob1  eg2.bin-prob2  eg2.rle  eg2.rle-bin  eg2.txt  readme-eg1.rle-bin  readme-eg2.bin-prob1  readme-eg2.bin-prob2  readme-eg2.rle-bin
exercises/ex1/: ava-task.sty  ex1.tex
exercises/ex6/: ex6.txt
programs/: entropy.py
programs/arithmetic/: arithmetic_encode  arithmetic_encode.cpp
programs/bwt/: bwtdecode  bwtencode  test-large.dec  test-large.enc  test-small.txt
programs/huffman/: huffman_encode  huffman_encode.cpp  test1.txt
sample_exam/q2/: bwtencode.cpp  q2  q2-slow.cc
